--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,8 @@
   <build_depend>pcl_conversions</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>velodyne_pointcloud</build_depend>
+  <build_depend>tf2</build_depend>
+  <build_depend>tf2_ros</build_depend>
 
   <run_depend>message_runtime</run_depend>
   <run_depend>pcl_conversions</run_depend>
@@ -23,6 +25,8 @@
   <run_depend>sensor_msgs</run_depend>
   <build_depend>sensor_msgs</build_depend>
   <run_depend>velodyne_pointcloud</run_depend>
+  <run_depend>tf2</run_depend>
+  <run_depend>tf2_ros</run_depend>
 
   <export></export>
 </package>
